--- a/lecsofozo/Solution.DesktopApp/Resources/Styles/AppStyles.xaml
+++ b/lecsofozo/Solution.DesktopApp/Resources/Styles/AppStyles.xaml
@@ -6,8 +6,8 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 >
     <Style x:Key="ValidationErrorLabelStyle" TargetType="Label">
-        <Setter Property="TextColor" Value="Red" />
-        <Setter Property="FontSize" Value="10" />
+        <Setter Property="TextColor" Value="{AppThemeBinding Dark=HotPink, Light=Red}" />
+        <Setter Property="FontSize" Value="15" />
     </Style>
 
     <Style x:Key="InputLabel" TargetType="Label">
