--- a/lecsofozo/Solution.DesktopApp/AppShell.xaml
+++ b/lecsofozo/Solution.DesktopApp/AppShell.xaml
@@ -30,6 +30,11 @@
                     <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
                 </MenuFlyoutItem.IconImageSource>
             </MenuFlyoutItem>
+            <MenuFlyoutItem Text="Add New Judge" Command="{Binding AddNewJudgeCommand}">
+                <MenuFlyoutItem.IconImageSource>
+                    <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
+                </MenuFlyoutItem.IconImageSource>
+            </MenuFlyoutItem>
         </MenuBarItem>
     </Shell.MenuBarItems>
 
