--- a/lecsofozo/Solution.DesktopApp/Views/CreateOrEditTeamView.xaml
+++ b/lecsofozo/Solution.DesktopApp/Views/CreateOrEditTeamView.xaml
@@ -21,34 +21,50 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <StackLayout>
-        <Label Text="{Binding Title}" Style="{StaticResource PageTitle}"/>
+    <ScrollView>
+        <StackLayout>
+            <Label Text="{Binding Title}" Style="{StaticResource PageTitle}"/>
 
-        <VerticalStackLayout Style="{StaticResource FormLineContainer}" HorizontalOptions="Center">
-            <Label Text="Name" Style="{StaticResource InputLabel}" />
-            <Entry Text="{Binding Name.Value}" MinimumWidthRequest="400" MaximumWidthRequest="400">
-                <Entry.Behaviors>
-                    <toolkit:EventToCommandBehavior EventName="TextChanged" Command="{Binding TeamNameValidationCommand}" />
-                </Entry.Behaviors>
-            </Entry>
-            <Label Text="{Binding Name.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
-                    Style="{StaticResource ValidationErrorLabelStyle}" />
-        </VerticalStackLayout>
+            <VerticalStackLayout Style="{StaticResource FormLineContainer}" HorizontalOptions="Center">
+                <Label Text="Name" Style="{StaticResource InputLabel}" />
+                <Entry Text="{Binding Name.Value}" MinimumWidthRequest="400" MaximumWidthRequest="400">
+                    <Entry.Behaviors>
+                        <toolkit:EventToCommandBehavior EventName="TextChanged" Command="{Binding TeamNameValidationCommand}" />
+                    </Entry.Behaviors>
+                </Entry>
+                <Label Text="{Binding Name.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                        Style="{StaticResource ValidationErrorLabelStyle}" />
+            </VerticalStackLayout>
 
-        <ScrollView HorizontalOptions="Center">
-            <VerticalStackLayout>
+            <Border Stroke="Gray" StrokeThickness="2" Padding="20" WidthRequest="550">
                 <VerticalStackLayout Style="{StaticResource FormLineContainer}" HorizontalOptions="Center">
-                    <Label Text="Participant 1" Style="{StaticResource InputLabel}" />
-                    <Entry Text="{Binding Participant1.Name}" MinimumWidthRequest="400" MaximumWidthRequest="400">
+                    <Label Text="Participant name" Style="{StaticResource InputLabel}" HorizontalTextAlignment="Center"/>
+                    <Entry Text="{Binding Participant.Name.Value}" MinimumWidthRequest="200" MaximumWidthRequest="200">
                         <Entry.Behaviors>
-                            <toolkit:EventToCommandBehavior EventName="TextChanged" Command="{Binding Participant1NameValidationCommand}" />
+                            <toolkit:EventToCommandBehavior EventName="TextChanged" Command="{Binding ParticipantValidationCommand}" />
                         </Entry.Behaviors>
                     </Entry>
-                    <Label Text="{Binding Participant1.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
-                           Style="{StaticResource ValidationErrorLabelStyle}" />
+                    <Label Text="{Binding Participant.Name.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                                Style="{StaticResource ValidationErrorLabelStyle}" HorizontalTextAlignment="Center"/>
+
+                    <Label Text="Participant image" Style="{StaticResource InputLabel}" HorizontalTextAlignment="Center"/>
+                    <StackLayout Orientation="Vertical"
+                                Grid.Column="0"
+                                Style="{StaticResource FormLineContainer}">
+                        <Border Stroke="{AppThemeBinding Light=Black, Dark=White}"
+                            StrokeThickness="2"
+                            Background="Transparent"
+                            Padding="0"
+                            HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                            <Image Source="{Binding Image}" HeightRequest="500" WidthRequest="300"/>
+                        </Border>
+                        <Button Text="Plese select an image"
+                            Margin="0,5"
+                            Command="{Binding ImageSelectCommand}" />
+                    </StackLayout>
+                    <Button Text="Add member to team" WidthRequest="200" Command="{Binding MemberAddingCommand}"/>
                 </VerticalStackLayout>
-            </VerticalStackLayout>
-        </ScrollView>
-        
-    </StackLayout>
+            </Border>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
