--- a/lecsofozo/Solution.DesktopApp/AppShell.xaml
+++ b/lecsofozo/Solution.DesktopApp/AppShell.xaml
@@ -25,11 +25,18 @@
         </MenuBarItem>
 
         <MenuBarItem Text="Race">
-            <MenuFlyoutItem Text="Add New Team" Command="{Binding AddNewTeamCommand}">
-                <MenuFlyoutItem.IconImageSource>
-                    <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
-                </MenuFlyoutItem.IconImageSource>
-            </MenuFlyoutItem>
+            <MenuFlyoutSubItem Text="Team">
+                <MenuFlyoutItem Text="Add New Team" Command="{Binding AddNewTeamCommand}">
+                    <MenuFlyoutItem.IconImageSource>
+                        <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
+                    </MenuFlyoutItem.IconImageSource>
+                </MenuFlyoutItem>
+                <MenuFlyoutItem Text="List Teams" Command="{Binding ListTeamCommand}">
+                    <MenuFlyoutItem.IconImageSource>
+                        <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
+                    </MenuFlyoutItem.IconImageSource>
+                </MenuFlyoutItem>
+            </MenuFlyoutSubItem>
             <MenuFlyoutSubItem Text="Judge">
                 <MenuFlyoutItem Text="Add New Judge" Command="{Binding AddNewJudgeCommand}">
                     <MenuFlyoutItem.IconImageSource>
