--- a/lecsofozo/Solution.DesktopApp/AppShell.xaml
+++ b/lecsofozo/Solution.DesktopApp/AppShell.xaml
@@ -49,6 +49,13 @@
                     </MenuFlyoutItem.IconImageSource>
                 </MenuFlyoutItem>
             </MenuFlyoutSubItem>
+            <MenuFlyoutSubItem Text="Race">
+                <MenuFlyoutItem Text="Add New Race" Command="{Binding AddNewRaceCommand}">
+                    <MenuFlyoutItem.IconImageSource>
+                        <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
+                    </MenuFlyoutItem.IconImageSource>
+                </MenuFlyoutItem>
+            </MenuFlyoutSubItem>
         </MenuBarItem>
     </Shell.MenuBarItems>
 
